--- a/issue-notes/47.md
+++ b/issue-notes/47.md
@@ -1,4 +1,10 @@
 # issue ブラウザ対応: SMFバイナリをJSONに変換するWASMインターフェースの実装 #47
 [issues #47](https://github.com/cat2151/smf-to-ym2151log-rust/issues/47)
 
-
+## agentに投げるprompt案
+- 現在CLIとして動作しているこのツールについて、変換機能を、Webブラウザ上（JavaScript）からも利用可能にしたいと考えています。  
+- そのために wasm-bindgen を導入し、SMFのバイナリデータを受け取って解析結果をJSON文字列として返すWASM関数を実装してください。
+- なお、変換ロジックは既にライブラリクレートとして分離されているはずですので、それを呼び出すWASM用のエントリポイントを追加してください。
+- 完了条件
+    - WASMビルドが成功し、pkgディレクトリに成果物が配置されること。
+    - 既存のCLIツールとしての機能（cargo run）が破壊されず、そのまま動作すること。
