Enhance tool for WASM support and refactor logic #47
Refactor parsing logic into a library crate and add WASM entry points for the conversion functionality.

--- a/issue-notes/47.md
+++ b/issue-notes/47.md
@@ -4,7 +4,8 @@
 ## agentに投げるprompt案
 - 現在CLIとして動作しているこのツールについて、変換機能を、Webブラウザ上（JavaScript）からも利用可能にしたいと考えています。  
 - そのために wasm-bindgen を導入し、SMFのバイナリデータを受け取って解析結果をJSON文字列として返すWASM関数を実装してください。
-- なお、変換ロジックは既にライブラリクレートとして分離されているはずですので、それを呼び出すWASM用のエントリポイントを追加してください。
+- 必要に応じて、バイナリデータをSMFとしてparseする処理なども、ライブラリクレートとして分離するようリファクタリングしてください。
+- それらを呼び出すWASM用のエントリポイントを追加してください。
 - 完了条件
     - WASMビルドが成功し、pkgディレクトリに成果物が配置されること。
     - 既存のCLIツールとしての機能（cargo run）が破壊されず、そのまま動作すること。
