Update issue notes with investigation instructions
Added instructions to investigate GitHub Actions and fix errors.

--- a/issue-notes/70.md
+++ b/issue-notes/70.md
@@ -1,4 +1,6 @@
 # issue PR 69を取り込んだが、問題がまったく解決していない #70
 [issues #70](https://github.com/cat2151/smf-to-ym2151log-rust/issues/70)
 
+# 指示
+- まずGitHub Actionsを調査せよ。もしエラーであれば、「エラーでissueが自動起票される」よう、actionsを修正せよ
 
