Update issue notes for sound data handling

--- a/issue-notes/83.md
+++ b/issue-notes/83.md
@@ -1,4 +1,10 @@
 # issue 音色データの扱いについて整理する #83
 [issues #83](https://github.com/cat2151/smf-to-ym2151log-rust/issues/83)
 
-
+# これまでの課題
+- デフォルト音色データ 0～127 がまだ揃っていない
+- ガワだけでいいので用意したほうがいいが、まだ揃っていない
+- このため、和音SMFも、sine wave音色で鳴らすことしかできていないはず
+- これをやりたい：「ランダム音色で、音符はMMLでその場で入力して鳴らす、和音も可」
+- 制約：ブラウザ音色エディタは別リポジトリ（web-ym2151）である
+- 対策案： 音色データreadを使ったdemo、上記のランダム音色かつ、音符MML演奏demo、は、web-ym2151側で実施とする
