Update desired feature description in issue notes

--- a/issue-notes/83.md
+++ b/issue-notes/83.md
@@ -5,6 +5,6 @@
 - デフォルト音色データ 0～127 がまだ揃っていない
 - ガワだけでいいので用意したほうがいいが、まだ揃っていない
 - このため、和音SMFも、sine wave音色で鳴らすことしかできていないはず
-- これをやりたい：「ランダム音色で、音符はMMLでその場で入力して鳴らす、和音も可」
+- これをやりたい：「ブラウザ、ランダム音色で、音符はMMLでその場で入力して鳴らす、和音も可」
 - 制約：ブラウザ音色エディタは別リポジトリ（web-ym2151）である
 - 対策案： 音色データreadを使ったdemo、上記のランダム音色かつ、音符MML演奏demo、は、web-ym2151側で実施とする
