Update issue notes for optional JSON sound data
Added details about the plan and specifics for issue #90 regarding optional JSON for sound data.

--- a/issue-notes/90.md
+++ b/issue-notes/90.md
@@ -1,4 +1,12 @@
 # issue 音色を添付JSONで指定可能にする #90
 [issues #90](https://github.com/cat2151/smf-to-ym2151log-rust/issues/90)
 
+# 方針
+- smfデータと同時に、添付JSONをoptionalで指定可能とする
+- 添付JSONとは、smf以外の音色データ、例えばProgram Change 000 を受信したらどのようにレジスタに音色を書き込むか、などが記されている
+- 添付JSONには、YM2151音色データを定義可能にする
+- 音色データformatは、仮で、現在この関連アプリで使っているものを採用する
 
+# 具体的には
+- 具体的にはあとで整理する
+- 整理したらagentに投げる
