Enhance issue #91 with delay vibrato JSON specifications
Added specifications for optional JSON attachment to specify delay vibrato in SMF data. Updated API with an additional argument and enabled testing of the new API in the library demo.

--- a/issue-notes/91.md
+++ b/issue-notes/91.md
@@ -1,4 +1,20 @@
 # issue ディレイビブラートを添付JSONで指定可能にする #91
 [issues #91](https://github.com/cat2151/smf-to-ym2151log-rust/issues/91)
 
-
+# 仕様
+- smfデータと同時に、添付JSONをoptionalで指定可能とする
+- APIに仕様追加、引数が1つ増えるAPIが追加
+- ひとまずライブラリdemoで、追加APIのtestを可能にする
+- 添付JSONには、ディレイビブラートを定義可能にする。ほかいろいろなものを追加可能だがまずディレイビブラートに絞る
+- formatはひとまず、DelayVibrato: true とする。これが未定義やfalseなら、ディレイビブラートなしである
+- ひとまずディレイタイム200ms、のち初期振幅でビブラート開始
+- 初期振幅はKCとKFで上下0centぶん
+- 最終振幅はKCとKFで上下100centぶん
+- 初期振幅から最終振幅まで300msかかって変化
+- 周期は1秒間に6回
+- ビブラート波形は三角波で位相は0スタート、つまり最初は振幅0、のち+100centまで増え、0centまで減る、-100centまで減る、0centまで増える、で1周期
+- KCとKFの出力のビブラートの時間分解能は、MIDI Note Numから得た周波数の1周期ぶんとする
+- それをJSON生成時に、KCとKFを時間分解能ごとに変動させて出力する
+- ノートオフ状態からノートオン状態に変化するごとに、ディレイ用カウンタを0に戻す、つまりビブラートなし状態に戻る
+- ノートオフしてもリリース部分でKCとKFによるビブラートはかかったままとする
+- これらの実現のため、to JSON変換処理においては、ch0～7それぞれで、KCとKFの値のbase（ビブラートなし時）が、いくつか？のステートマシンを持つことになる。そしてビブラート処理を通した結果のKCとKFがJSON出力される
