Update issue notes for delay vibrato demo page
Added details about the delay vibrato demo page for issue #93.

--- a/issue-notes/93.md
+++ b/issue-notes/93.md
@@ -1,4 +1,7 @@
 # issue ディレイビブラートdemo pageを、既存pageとは別に追加する #93
 [issues #93](https://github.com/cat2151/smf-to-ym2151log-rust/issues/93)
 
-
+- 用途は、ディレイビブラートの検証用
+- smfをuploadして、それにディレイビブラートをかける
+- ディレイビブラートJSONがtextareaで編集可能、デバウンスして出力JSONに反映
+- 演奏（web-ym2151ライブラリを利用する）
