Revise sound data format and add JSON demo page
Update the format for sound data and add a demo page for JSON sound definitions.

--- a/issue-notes/90.md
+++ b/issue-notes/90.md
@@ -5,8 +5,8 @@
 - smfデータと同時に、添付JSONをoptionalで指定可能とする
 - 添付JSONとは、smf以外の音色データ、例えばProgram Change 000 を受信したらどのようにレジスタに音色を書き込むか、などが記されている
 - 添付JSONには、YM2151音色データを定義可能にする
-- 音色データformatは、仮で、現在この関連アプリで使っているものを採用する
-
-# 具体的には
-- 具体的にはあとで整理する
-- 整理したらagentに投げる
+- 音色データformatは、cat2151の直近のリポジトリを参照し、それをJSONで定義とすること
+- 専用の音色JSON demo pageを、既存pageとは別に新規追加すること。
+    - smfをuploadし、
+    - textareaの音色データを編集すると、デバウンスし、反映して演奏する。
+    - 演奏はweb-ym2151ライブラリを利用する
