Update issue notes for issue #105
Added details about MML input textarea and its functionality.

--- a/issue-notes/105.md
+++ b/issue-notes/105.md
@@ -1,4 +1,6 @@
 # issue demoの音色添付JSON demoについて、smfアップロードボタンの近くに、MML入力textareaを配置し、後着優先とする #105
 [issues #105](https://github.com/cat2151/smf-to-ym2151log-rust/issues/105)
 
-
+- つまりSMFアップロードすれば、SMFをレジスタlog JSONに変換する。
+- 一方でMML textareaの入力デバウンス後は、MML to SMF変換のち、SMFをレジスタlog JSONに変換する。
+- MML to SMF の実現方法は、[mmlabc-to-smf-rust](https://cat2151.github.io/mmlabc-to-smf-rust/) リポジトリの demo-library/ を参照せよ
