Enhance issue #111 with demo page and JSON updates
Added a new demo page and JSON format for addressing click noise issues. Included settings for gradual envelope adjustments and attack continuation behavior.

--- a/issue-notes/111.md
+++ b/issue-notes/111.md
@@ -1,4 +1,20 @@
 # issue demoの添付JSONに、新たなdemo pageを追加する。プチノイズ対策用の添付JSONである #111
 [issues #111](https://github.com/cat2151/smf-to-ym2151log-rust/issues/111)
 
+# プチノイズについて
+- 現状、素朴にドレミを鳴らすと、キーオン時にプチプチとノイズが発生する。
+- うろ覚えだが、ディケイとリリース（セカンドディケイ）とアタックの間で急激に（波形1周期よりも短い時間単位で）振幅が変化するため。
+- よって、キーオン時刻から逆算し、一時的にbase envelopeに対する、ゆるやかなdecay and attack envelopeを指定する。波形1周期の時間単位でenvelopeする用である。
+- うろ覚えなので設定値をJSONで変更しながらやる。
+- demo pageを作る
+- 添付JSONに新たにプチノイズ対策設定のformatを追加する
+- プチノイズ対策設定に従い、前述のゆるやかenvelope eventと、復帰eventを生成する。トリガーは「キーオン」であり、生成タイミングは「キーオン前」である。曲先頭の場合はやらなくていい。一度キーオンしたあとでいい。
 
+# アタック継続について
+- 前の音のリリースが消える前に次の音がキーオンすると、リリース中のエンベロープ音量のままアタックが継続される
+- このため、主にモジュレータがスローアタックかつスローリリースの音色で、ドレミが1つのエンベロープで聴こえる現象が発生する
+- これも、添付JSONで、対応on/offを変更できるようにせよ
+- 対応onの場合は、
+  - 生成タイミングは「キーオン前」で、「リリースレイトをbase release rateに保存し、リリースレイトを添付JSONで指定した値に変更してキーオフ」を「添付JSONで指定した時間、例えばキーオンの0.001s前」のイベントとして生成する
+  - さらに生成タイミング「キーオン前」に、キーオンと同じ時刻にキーオンの前にリリースレイトをbase release rate値に復帰する。キーオンの前なのはわかりやすい（音色を決定してからキーオン、というメンタルモデルがわかりやすい）ため。
+- これ用のdemo pageと添付JSONも専用demo pageとして用意せよ
