Update JSON format for sound program self-descriptiveness
Changed the JSON format for sound program definitions to enhance self-descriptiveness. Updated the structure to include an array of ProgramChange items with defined sound numbers.

--- a/issue-notes/112.md
+++ b/issue-notes/112.md
@@ -1,4 +1,16 @@
 # issue 添付JSONについて、format変更。音色JSONの自己記述性を高めるため、ProgramChangeはJSON項目名にProgramChangeという名称をつける #112
 [issues #112](https://github.com/cat2151/smf-to-ym2151log-rust/issues/112)
 
+- あわせて添付JSON構造を変更する
+- 0個～128個の配列である
+- 配列の1要素：
+  - ProgramChange: 0 のように、音色番号0～127をJSONで定義して、自己記述性を高める
+  - ディレイビブラート、ポルタメント、LFO、も、ProgramChangeとセットで扱う。
+    - 設計思想：
+      - SMF側とMML側の記述量を減らす。ProgramChangeするだけで多彩な音色を楽しめる。
+      - LFOだけ変更したい場合がありうるので、それは別途検討する。現状は「新たなProgramChangeを上位レイヤーで生成で対処」の想定。
+      - JSON構造をシンプルにする。JSON記述量はボイラープレート的に増えるが、「上位レイヤーで生成されるものなのでOK」の想定。
+      - 割り切っていること：これはSC-88Proの挙動でいうと、パッチ側（パッチ変更すると、紐付くToneModifyがまるごと変化する）の挙動である。
+        - 本来SC-88Proの通常のmode1においては、ProgramChangeでToneModifyは変化しない（それぞれは直交している）。
+        - ここではSC-88Proと挙動が違ってもよい、と割り切る。前述のメリットを優先する。
 
