Modify JSON examples in issue-notes/112.md
Update demo JSON examples to align with simplified structure.

--- a/issue-notes/112.md
+++ b/issue-notes/112.md
@@ -13,4 +13,5 @@
       - 割り切っていること：これはSC-88Proの挙動でいうと、パッチ側（パッチ変更すると、紐付くToneModifyがまるごと変化する）の挙動である。
         - 本来SC-88Proの通常のmode1においては、ProgramChangeでToneModifyは変化しない（それぞれは直交している）。
         - ここではSC-88Proと挙動が違ってもよい、と割り切る。前述のメリットを優先する。
+- 上記にあわせてdemoの添付JSONのexamplesも変更すること
 
