Add linear interpolation tone change feature and demo page
Implement linear interpolation tone change on/off for adjacent program changes and add a demo page.

--- a/issue-notes/115.md
+++ b/issue-notes/115.md
@@ -1,4 +1,15 @@
 # issue 添付JSONについて、隣接する（後続の番号への）線形補間音色変化のon/offを実装し、demo pageも新規追加する #115
 [issues #115](https://github.com/cat2151/smf-to-ym2151log-rust/issues/115)
 
+- 要は、ProgramChange0と1を定義し、さらにProgramChange0側に、「changeToNextTone: true」「changeToNextToneTime: 5」を指定すれば、
+- 5秒で、ProgramChange1の音色に線形補間で変化する。
+- つまりレジスタbase値を、5秒の間、連続して変更し続けて、レジスタ書き込みeventを発生させる。
+- これにより、MULがProgramChange0において1で、ProgramChange1においてMUL6だった音色は、1秒ごとにMULの値が1ずつ変化して、音色変化をすることになる。
+- よりスタンダードな用途としては、モジュレータTLがProgramChange0と1とで、20違う音色があれば、5秒間でモジュレータTLが変わって音色の倍音成分が滑らかに変化していくことになる。
+- ProgramChange1の音色に変わったのち、5秒かけて、ProgramChange0の音色に戻る。これをループする。
+- これは仮formatである
+   -  UX検証後、検証データを元に、「隣接音色」という結合、を使わない、より使いやすいformatを検討する。
+   - 例えばNRPN定義を添付JSONで行い、そこで定義したNRPNがSMFにあればこれをon/offや、動的なパラメータ変更、あるいはProgramChangeがある場所をみて自動的に時間を決定、などである。
+   - 今やらないのは、データ不足、YAGNI、であるから。
 
+   
